--- a/20180511_libman.md
+++ b/20180511_libman.md
@@ -1,4 +1,4 @@
-# Handle client side libraries for ASP NET Core with Library Manager
+# ASP NET Core Client-side libraries management with VS 2017 Library Manager
 
 Few weeks ago I discussed how we could create a healthchek library which would return json status of our application. Using the json, I wanted to make a quick page to display healthchecks in a nice visual. I wanted to quickly add `Bootstrap` and `momentJS`. For frontend libraries, I was used to use Bower as it nicely put every frontend package in `/bower_components` which can be served as static data. But since Bower was announcing that it was no longer supported and requested to use Yarn or NPM, I started to look around for an easier solution than those as I don't really care about source code of the frontend libraries, all I want is the latest compiled versions. After few minutes of research, I found out that the team in Microsoft felt the same way as I did and already worked on a tool called `Library manager` (libman) and is available in `VS Preview` for the moment. Libman gives the benefit to allow developers to download locally the latest compiled version of the `CSS` or `JS` of their preferred frameworks for frontend usage. We can see Libman as a CDN file management for local usage. Today I will show how it can be used and combined with Razor pages to bring quickly pages to life. This post will be composed of three parts:
 
@@ -11,9 +11,28 @@ Few weeks ago I discussed how we could create a healthchek library which would r
 __Before starting, make sure that you are on Visual Studio 2017 Preview 15.7.0.__
 
 First thing to do is to right click on the project and select `Manage Client-Side Libraries`.
-After that we have enabled it, we will have a `libman.json` file. Right click on the `libman.json` file then select `Restore on build`. This will have as effect to download locally the libraries to the destination specified in the `libman.json`.
+
+![libman_1](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20180511_libman/libman_1.PNG)
+
+After that we have enabled it, we will have a `libman.json` file. Right click on the `libman.json` file then select `Restore on build`. 
+
+![libman_2](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20180511_libman/libman_2.PNG)
+
+This will have as effect to download locally the libraries to the destination specified in the `libman.json`.
 
 ## 2. Configure Bootstrap
+
+Now that we have Libman setup, we want to be able to use Bootstrap 4.1.0 for our website. To do that we would normally follow the instruction from Bootstrap and use the `link` and `script` tags:
+
+```html
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+```
+
+```html
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+```
 
 ```json
 {
