--- a/20180511_libman.md
+++ b/20180511_libman.md
@@ -22,17 +22,17 @@ This will have as effect to download locally the libraries to the destination sp
 
 ## 2. Configure Bootstrap
 
-Now that we have Libman setup, we want to be able to use Bootstrap 4.1.0 for our website. To do that we would normally follow the instruction from Bootstrap and use the `link` and `script` tags:
+Now that we have Libman setup, we want to be able to use Bootstrap 4.1.0 for our website. To do that we would normally use CDN links:
 
 ```html
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.min.css" />
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/js/bootstrap.min.js"></script>
 ```
 
-```html
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-```
+But thanks to Libman, we can download locally the libraries by configuring the `libman.json` file:
 
 ```json
 {
@@ -42,37 +42,29 @@ Now that we have Libman setup, we want to be able to use Bootstrap 4.1.0 for our
       "library": "jquery@3.3.1",
       "destination": "wwwroot/lib/jquery",
       "files": [
-        "jquery.slim.js",
-        "jquery.slim.min.js",
-        "jquery.slim.min.map"
+        "jquery.slim.min.js"
       ]
     },
     {
       "library": "popper.js@1.14.3",
       "destination": "wwwroot/lib/popper.js",
       "files": [
-        "umd/popper.js",
-        "umd/popper.min.js",
-        "umd/popper.min.js.map"
+        "umd/popper.min.js"
       ]
     },
     {
-      "library": "twitter-bootstrap@4.1.0",
+      "library": "twitter-bootstrap@4.1.1",
       "destination": "wwwroot/lib/bootstrap",
       "files": [
-        "css/bootstrap.css",
-        "css/bootstrap.css.map",
         "css/bootstrap.min.css",
-        "css/bootstrap.min.css.map",
-        "js/bootstrap.bundle.js",
-        "js/bootstrap.bundle.js.map",
-        "js/bootstrap.bundle.min.js",
-        "js/bootstrap.bundle.min.js.map"
+        "js/bootstrap.bundle.min.js"
       ]
     }
   ]
 }
 ```
+
+By setting the destination to `wwwroot/lib/xxx`, the package will be dowloaded to the `wwwroot` folder which is the default folder served by ASP NET Core static file.
 
 ## 3. Create a simple site with Razor pages
 
@@ -106,6 +98,95 @@ This folder structure will yield the following route tree:
 
 ### 3.2 Model
 
-To load data, 
+A Razor page can optionally define a model class which can handle `HEAD`, `GET` and `POST` by adding a function prefix by `on`. For example:
 
-A Razor page can optionally define a model class which defines function to support the HTTP verbs.
+```c#
+public class IndexModel : PageModel
+{
+    public void OnGet()
+    {
+        // load the values
+    }
+
+    public IEnumerable<string> Values { get; set; }
+}
+```
+
+This will get called automatically when the page is requested.
+It is also possible to add extra `POST` handlers using the tag helper `asp-page-handler`:
+
+```html
+<button type="submit" asp-page-handler="test" asp-route-data="@somedata">Test</button>
+```
+
+And from the model class we have the handler:
+
+```c#
+public Task OnTestAsync()
+{
+    // do something
+}
+```
+
+### 3.3 Layout, ViewImports and tag helpers
+
+Just like Razor views, we have access to layouts, view imports and tag helpers.
+
+_If you never seen Razor, you can have a look at my previous blog post on [Razor syntax and helpers](https://kimsereyblog.blogspot.sg/2017/05/razor-syntax-and-helpers.html)._
+
+We start by defining the `_ViewImports.cshtml` where we globally load all tag helpers:
+
+```html
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+```
+
+Next we create a common layout `_Layout.cshtml` for all pages.
+
+```html
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Libman</title>
+    <environment names="Development">
+        <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.css" />
+    </environment>
+    <environment names="Production">
+        <link rel="stylesheet" type="text/css" href="~/lib/bootstrap/css/bootstrap.min.css" />
+    </environment>
+</head>
+<body>
+    @RenderBody()
+    <environment names="Development">
+        <script src="~/lib/jquery/jquery.slim.js"></script>
+        <script src="~/lib/popper.js/umd/popper.js"></script>
+        <script src="~/lib/bootstrap/js/bootstrap.bundle.js"></script>
+    </environment>
+    <environment names="Production">
+        <script src="~/lib/jquery/jquery.slim.min.js"></script>
+        <script src="~/lib/popper.js/umd/popper.min.js"></script>
+        <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+    </environment>
+</body>
+</html>
+```
+
+This layout loads the libraries and make use of the `environment` tag helper to load the minified version for `Production`.
+
+Lastly every page can make use of the layout, for example here the index page `Index.cshtml`:
+
+```html
+@page
+@{
+    Layout = "_Layout";
+}
+
+<h1 class="display-1">Welcome to Libman test.</h1>
+<p>Hello world!</p>
+```
+
+When navigating to the site, we should now see our welcome message with Bootstrap style!
+
+## Conclusion
+
+Today we saw how to we could use Libman to manage client site libraries. We also saw how we could leverage Razor pages to start building a site using Razor. Hope you liked this post! See you next time!
