--- a/20180511_libman.md
+++ b/20180511_libman.md
@@ -66,6 +66,8 @@ But thanks to Libman, we can download locally the libraries by configuring the `
 
 By setting the destination to `wwwroot/lib/xxx`, the package will be dowloaded to the `wwwroot` folder which is the default folder served by ASP NET Core static file.
 
+![libman_3](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20180511_libman/libman_3.PNG)
+
 ## 3. Create a simple site with Razor pages
 
 Razor pages work similarly as Razor views with the only difference that they are standalone and do not require controllers.
