--- a/20180511_libman.md
+++ b/20180511_libman.md
@@ -189,6 +189,8 @@ Lastly every page can make use of the layout, for example here the index page `I
 
 When navigating to the site, we should now see our welcome message with Bootstrap style!
 
+[Full source code available on my GitHub](https://github.com/Kimserey/lib-man-bootstrap)
+
 ## Conclusion
 
 Today we saw how to we could use Libman to manage client site libraries. We also saw how we could leverage Razor pages to start building a site using Razor. Hope you liked this post! See you next time!
