--- a/20180518_bash.md
+++ b/20180518_bash.md
@@ -6,6 +6,7 @@ Since I have installed [Ubuntu as a subsystem](https://kimsereyblog.blogspot.sg/
 2. scp
 3. aliases
 4. less
+5. grep
 
 ## 1. ssh
 
@@ -29,15 +30,20 @@ Next create or modify the `~/.ssh/config` file to specify the identity file for 
 
 ```sh
 Host hostname1
+    HostName hostname1.com
     IdentityFile ~/.ssh/key1.pem
+    User user
+
 Host hostname2
+    HostName hostname2.com
     IdentityFile ~/.ssh/key2.pem
+    User user
 ```
 
 Now we will no longer need to specify the identity file to ssh into the server.
 
 ```sh
-ssh user:hostname
+ssh hostname1
 ```
 
 ### 1.2 ssh tunneling
@@ -47,10 +53,31 @@ Another useful functionality is the tunneling `-L`. SSH allows to redirect traff
 This is particularly useful when an address is only accessible from the server.
 
 ```sh
-ssh user:hostname -L 9500:localhost:9000
+ssh hostname1 -fNL 9500:localhost:9000
 ```
 
+`-f` is used to start the tunneling in the background. To terminate it we can find the process by doing `ps aux | grep 9500:localhost:9000` and then execute a `kill -9 processid` to kill the ssh process.
+`-N` is to specify that we do not want to execute any remote command.
+
 This command will tunnel all traffic from our port 9500 to localhost:9000 on the server.
+
+This can also be setup in the config file:
+
+```sh
+Host hostname1
+    HostName hostname1.com
+    IdentityFile ~/.ssh/key1.pem
+    User user
+
+# tunnel to hostname1.com
+Host tunnel
+    HostName hostname1.com
+    IdentityFile ~/.ssh/key1.pem
+    LocalForward 9500 localhost:9000
+    User user
+```
+
+Then we will be able to do `ssh tunnel` to start a tunnel. We can also use the arguments the same way with `ssh tunnel -fN`.
 
 ## 2. scp
 
@@ -92,11 +119,23 @@ fi
 
 ## 4. less
 
-Lastly when we need to watch a file, we can use `less`.
+For watching a file, we can use `less`.
 
 ```sh
 less +F /var/log/myapp/app.log
 ```
+
+## 5. grep
+
+Lastly `grep` is used to find a particular line in a text.
+We seen earlier that we can pipe `| grep` to find a process but we can also pipe anything which is a text format. For example we can also pipe `man` which is the manual and find the definition of a partulcar argument:
+
+```sh
+man ssh | grep -C3 -- -N
+```
+
+`-C` prints the 3 surrounding lines of each match.
+`--` (double dash) is used to define the end of the options so that we can specify `-N` as a string pattern. Without it, it would have been considered as an option.
 
 And that concludes today's post.
 
