--- a/20180518_bash.md
+++ b/20180518_bash.md
@@ -26,7 +26,7 @@ ssh -i key.pem user:hostname
 It is also possible, to make life easier, to setup ssh to autodetect the private key file to use based on the host we are trying to access.
 
 We can achieve that by placing the `key.pem` file under `~/.ssh` and provide the proper rights `chmod 700 ~/.ssh`.
-Next create or modify the `~/.ssh/config` file to specify the identity file for this host.
+Next create or modify the `~/.ssh/config` file to specify the identity file and the hostname for this host.
 
 ```sh
 Host hostname1
@@ -40,7 +40,7 @@ Host hostname2
     User user
 ```
 
-Now we will no longer need to specify the identity file to ssh into the server.
+Now we will no longer need to specify the identity file and the hostname to ssh into the server.
 
 ```sh
 ssh hostname1
@@ -141,4 +141,4 @@ And that concludes today's post.
 
 ## Conclusion
 
-Today we saw some useful commands on bash mainly targeted to interact with a Linux server, copy files and create useful aliases to make work quicker. We saw how we could configure and use `ssh` to login on a remote server, we also saw how we could use `scp` to copy files in a secured way and lastly we saw how to save `alias` to make it quicker and to not have to memorize server addresses and lastly we saw a useful `less` command to watch files. Hope you liked this post, see you next time!
+Today we saw some useful commands on bash mainly targeted to interact with a Linux server, copy files and create useful aliases to make work quicker. We saw how we could configure and use `ssh` to login on a remote server, we also saw how we could use `scp` to copy files in a secured way and lastly we saw how to save `alias` to make it quicker and to not have to memorize server addresses and lastly we saw a useful `less` command to watch files and `grep` to find a particular line in a text input. Hope you liked this post, see you next time!
