--- a/20180518_bash.md
+++ b/20180518_bash.md
@@ -84,8 +84,11 @@ Then we will be able to do `ssh tunnel` to start a tunnel. We can also use the a
 `scp` provides a remote copy functionality:
 
 ```sh
-scp -r /dir user@hostname:~/
+scp -r /dir hostname1:~/
 ```
+
+`-r` is needed to copy a folder.
+`hostname1` is the host defined in the configuration file `~/.ssh/config`.
 
 It runs on ssh therefore we would need to setup ssh to autodetect the identity file as described in 1.1).
 
