--- a/20180518_bash.md
+++ b/20180518_bash.md
@@ -92,13 +92,19 @@ scp -r /dir hostname1:~/
 
 It runs on ssh therefore we would need to setup ssh to autodetect the identity file as described in 1.1).
 
+Without the config file we would have had done the following:
+
+```sh
+scp -i key.pem -r /dir user@hostname:~/
+```
+
 ## 3. Aliases
 
 To create aliases, we need to use the `alias` command. For example if we want to create a command to ssh and scp:
 
 ```sh
-alias ssh-myapp='ssh user@hostname'
-alias scp-myapp='scp -r /dir user@hostname:~/'
+alias ssh-myapp='ssh hostname1'
+alias scp-myapp='scp -r /dir hostname1:~/'
 ```
 
 But those are temporary, if we want to persist them, we can add them to `.bash_aliases`.
