--- a/20180525_systemd.md
+++ b/20180525_systemd.md
@@ -55,6 +55,9 @@ Once we have created the unit file, we can enable it to be automatically started
 systemctl enable myapp
 ```
 
+This will create symlinks from what was specified in `[Install]` section under `WantedBy`.
+In our unit we specified `multi-user.target` which is where most daemon run. Targets are logical group of units which can then be ordered for boot.
+
 If we need to modify the unit once it has already been enabled, we will need to reload the daemon using the following command:
 
 ```sh
@@ -87,9 +90,35 @@ systemctl status myapp-*
 
 Each of this commands can be targeted to a single unit too.
 
+### Removing a service
+
+To remove a service we can reproduce the steps in reverse.
+
+Stop and disable the service:
+
+```sh
+systemd stop myapp
+systemd disable myapp
+```
+
+Disabling will remove the symlink created when we enabled it.
+
+Then remove your service unit file and associated configurations if any.
+
+```sh
+rm /etc/systemd/system/myapp.service
+```
+
+Reload systemd and reset the fail status to remove trace of your unwanted unit:
+
+```sh
+systemctl daemon-reload
+systemctl reset-failed
+```
+
 ## 3. Debugging using journalctl
 
-Once the application is running, the standard output logs are collected in` journald`.
+Once the application is running, the standard output logs are collected in `journald`.
 
 To see a particular unit log, we can use `journalctl`:
 
@@ -97,4 +126,42 @@ To see a particular unit log, we can use `journalctl`:
 journalctl -fxeu myapp
 ```
 
-`-f` is used to follow the changes of the file
+`-f` is used to follow the changes of the file.
+`-e` brings to the last page of logs.
+`-u` specifies the unit to look at.
+`-x` is used to specify extra log messages when available.
+`--since` and `--until` can be used to view specific date and time range. When dates aren't specified it is assumed to be today and when time is not specified it is assumed to be 00:00. For example `--since 14:00 --until 15:00` will show today's logs from 2pm till 3pm.
+
+The default time being UTC, it can be helpful to switch to local time.
+
+To find your current timezone, we can use:
+
+```sh
+timedatectl status
+```
+
+To find your desired timezone, we can use:
+
+```sh
+timedatectl list-timezones
+```
+
+Then update the default timezone:
+
+```sh
+timedatectl set-timezone Asia/Singapore
+```
+
+From now the date and time of journald logs will be in SGT.
+
+Lastly because journald logs are saved in a binary format, it is possible to display them under different formats. For example, we can display them in a json format:
+
+```sh
+journalctl -x -e -u myapp -o json | json_pp
+```
+
+This will display the logs in json prettified format.
+
+## Conclusion
+
+Today we saw how to manage processes with Systemd taking as example Kestrel process which is the webserver used to host ASP.NET Core application. We also saw how we could access logs and how to filter them for debugging. Hope you liked this post, see you next time!
