--- a/20180601_nginx.md
+++ b/20180601_nginx.md
@@ -1,44 +1,37 @@
-# Host ASP NET Core on Ubuntu
+# ASP NET Core with Nginx
 
 Few weeks ago I showed how to host ASP NET Core on Windows Server behind IIS. Compared to Windows Server, Ubuntu with nginx offers a quicker way to get started and a better control over the kestrel process.
 Today we will see how to host an ASP NET Core application on Ubuntu. This post will be composed of three parts:
 
-1. Get started by uploading your application
-2. Install nginx
-3. Configure nginx
+1. Install nginx
+2. Configure nginx
 
-## 1. Get started
+## 1. Install nginx
 
-From your ASP.NET Core project, run the publish command
-Start by publishing your project
-
-```cmd
-dotnet publish -c Release
+```sh
+apt-get update
+apt-get install nginx
 ```
 
-## 2. Manage Kestrel process with systemd
+After installing nginx, the daemon should have been installed and started. We should be able to navigate to `http://localhost` and see the nginx default page.
 
-```txt
-[Unit]
-Description=Expense King api
+This page is the default root folder of nginx which can be found under `/var/www/html/`.
 
-[Service]
-WorkingDirectory=/usr/share/ek/api
-ExecStart=/usr/bin/dotnet /usr/share/ek/api/ExpenseKing.Api.dll
-SyslogIdentifier=ek-api
-User=www-data
+The default configuration of the server can be found under the sites available `/etc/nginx/sites-available`.
 
-[Install]
-WantedBy=multi-user.target
+```sh
+ln -s /etc/nginx/sites-available/myapp /etc/nginx/sites-enable/myapp
 ```
 
-## 3. Configure nginx reverse proxy
+`/etc/nginx/sites-enabled`
+
+## 2. Configure nginx reverse proxy
 
 ```txt
 server {
     listen 80;
     listen [::]:80;
-    server_name groomgy.com www.groomgy.com;
+    server_name myapp.com www.myapp.com;
 
     proxy_http_version 1.1;
     proxy_set_header Connection keep-alive;
@@ -47,15 +40,9 @@ server {
     proxy_set_header Host $http_host;
     proxy_cache_bypass $http_upgrade;
 
-    location / {
-        proxy_pass http://localhost:4200/;
-    }
+    location / { }
 
     location /api/ {
-        proxy_pass http://localhost:5300/;
-    }
-
-    location /identity/ {
         proxy_pass http://localhost:5000/;
     }
 }
