--- a/20180601_nginx.md
+++ b/20180601_nginx.md
@@ -8,24 +8,40 @@ Today we will see how to host an ASP NET Core application on Ubuntu. This post w
 
 ## 1. Install nginx
 
+Start by installing nginx.
+
 ```sh
-apt-get update
-apt-get install nginx
+sudo apt-get update
+sudo apt-get install nginx
 ```
 
 After installing nginx, the daemon should have been installed and started. We should be able to navigate to `http://localhost` and see the nginx default page.
-
 This page is the default root folder of nginx which can be found under `/var/www/html/`.
 
-The default configuration of the server can be found under the sites available `/etc/nginx/sites-available`.
+We should also be able to interact with it just like any other daemon managed by `systemd`:
 
 ```sh
-ln -s /etc/nginx/sites-available/myapp /etc/nginx/sites-enable/myapp
+sudo systemctl start nginx
+sudo systemctl stop nginx
+sudo systemctl restart nginx
+sudo systemctl status nginx
 ```
 
-`/etc/nginx/sites-enabled`
+And similarly it can be debugged via `journald`:
+
+```sh
+sudo journalctl -xeu nginx
+```
+
+_If you aren't familiar with systemd, you can read my previous blog post on how to [Manage Kestrel process with systemd]()_.
 
 ## 2. Configure nginx reverse proxy
+
+Nginx is configured using configuration files known as `sites`. There are multiple sections for configuring different functionalities, here we will only explore `server` and `location`.
+
+The default configuration of the server can be found under the sites available `/etc/nginx/sites-available/default`. This is the default created with runs the index page from nginx.
+
+In order to enable a site, it needs to be in the `sites-enable`. This is achieved by creating a symlink, if we navigate to `/etc/nginx/sites-enabled`, we can find the symlink of `default`.
 
 ```txt
 server {
@@ -33,11 +49,11 @@ server {
     listen [::]:80;
     server_name myapp.com www.myapp.com;
 
+    include /etc/nginx/proxy_params;
+
     proxy_http_version 1.1;
     proxy_set_header Connection keep-alive;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Host $http_host;
     proxy_cache_bypass $http_upgrade;
 
     location / { }
@@ -46,4 +62,8 @@ server {
         proxy_pass http://localhost:5000/;
     }
 }
+```
+
+```sh
+ln -s /etc/nginx/sites-available/myapp /etc/nginx/sites-enable/myapp
 ```
