--- a/20180601_nginx.md
+++ b/20180601_nginx.md
@@ -89,7 +89,7 @@ server {
     listen 80;
     listen [::]:80;
     server_name myapp.com www.myapp.com;
-    include /etc/nginx/http_params;
+    include /etc/nginx/conf.d/http;
 
     location / { }
 
@@ -105,6 +105,7 @@ We included `proxy_params` which is a set of directives condensed for proxying. 
 We also included a set of http params which set the connection to keep-alive.
 
 ```txt
+# /etc/nginx/conf.d/http
 proxy_http_version 1.1;
 proxy_set_header Connection keep-alive;
 proxy_set_header Upgrade $http_upgrade;
