--- a/20180601_nginx.md
+++ b/20180601_nginx.md
@@ -112,6 +112,8 @@ proxy_set_header Upgrade $http_upgrade;
 proxy_cache_bypass $http_upgrade;
 ```
 
+For `http://localhost:5000/`, the URI `/` is important as it indicates to nginx that we want to append the rest of the path and remove the matching part. Because of that, on `/api/`, the trailing slash is equally important as nginx appends a slash (else the proxy would be `http://localhost/api/a/b/c => http://localhost:5000//a/b/c` which won't be valid).
+
 Once we are done we can check if the configuration is valid `nginx -t`. Next we can reload nginx with `sudo systemctl restart nginx`.
 Provided that the symlink was already created, we should now be able to navigate to our static index and to our api endpoints.
 
