completed nginx post

--- a/20180601_nginx.md
+++ b/20180601_nginx.md
@@ -34,7 +34,7 @@ And similarly it can be debugged via `journald`:
 sudo journalctl -xeu nginx
 ```
 
-_If you aren't familiar with systemd, you can read my previous blog post on how to [Manage Kestrel process with systemd]()_.
+_If you aren't familiar with systemd, you can read my previous blog post on how to [Manage Kestrel process with systemd](https://kimsereyblog.blogspot.sg/2018/05/manage-kestrel-process-with-systemd.html)_.
 
 ## 2. Configure nginx reverse proxy
 
@@ -132,7 +132,7 @@ public class HomeController: Controller
 }
 ```
 
-We can then uploaded on our server via scp. If you are not familiar with ssh on linux, [you can refer to my previous blog post on ssh]()
+We can then uploaded on our server via scp. If you are not familiar with ssh on linux, [you can refer to my previous blog post on ssh](https://kimsereyblog.blogspot.sg/2018/05/manage-kestrel-process-with-systemd.html)
 
 ```ssh
 scp -r /myapp hostname1:~/
