--- a/20180601_nginx.md
+++ b/20180601_nginx.md
@@ -132,7 +132,7 @@ public class HomeController: Controller
 }
 ```
 
-We can then uploaded on our server via scp. If you are not familiar with ssh on linux, [you can refer to my previous blog post on ssh](https://kimsereyblog.blogspot.sg/2018/05/manage-kestrel-process-with-systemd.html)
+We can then uploaded on our server via scp. If you are not familiar with ssh on linux, [you can refer to my previous blog post on ssh](https://kimsereyblog.blogspot.sg/2018/05/useful-bash-and-friends-commands.html)
 
 ```ssh
 scp -r /myapp hostname1:~/
@@ -143,7 +143,7 @@ We upload our binaries to `/usr/share/myapp` as it is the recommended linux file
 
 [https://en.m.wikipedia.org/wiki/Filesystem_Hierarchy_Standard](https://en.m.wikipedia.org/wiki/Filesystem_Hierarchy_Standard)
 
-Then we can start the process using systemd like how I explained on my previous blog post on [How to manage Kestrel with systemd]().
+Then we can start the process using systemd like how I explained on my previous blog post on [How to manage Kestrel with systemd](https://kimsereyblog.blogspot.sg/2018/05/manage-kestrel-process-with-systemd.html).
 
 And that conclude this post. Now that we have our app setup and nginx setup, we should be able to navigate to the site!
 
