--- a/20180608_pipe.md
+++ b/20180608_pipe.md
@@ -18,4 +18,82 @@ The reasons given on [the official documentation](https://github.com/ReactiveX/r
 
 ## 2. Example of migration
 
+Moving to pipe, import the operarors. For example this is a common code in my `ngrx` `effects`:
+
+mycall
+switchMap
+Call.map.catch
+
+_If you are interested in `ngrx` checkout my previous blog post [How to get started with Redux in Angular with ngrx]()_
+
+Now we can use the pipe function
+
+.pipe()
+
+*The rest of the operators now become simple standalone functions.*  We can combine them by passing them in `pipe`. This move brings us closer to a functional programming style as operators then become building blocks for us to build operators fulfilling our business.
+
+For example we could build an average operator which would calculate the average of each array received as input.
+
+```ts
+
+average -> observable<number[]> -> observable<number>
+
+```
+
+_We could have done it before too but it wasn't as straight forward. Here we only have a simple dedicated function._
+
+.pipe(average)
+
+Moving out of chaining, some functions made more sense as first class like `combineLatest`.
+Instead of chaining it, we can directly use:
+
+```
+combineLatest(obs1, obs2)
+```
+
+This make more sense than chaining as obs1 and obs2 are equal in term of behavior, unlike `withLatestFrom(obs2)` which only cares about the last value of obs2.
+
+```
+combine(obs1, obs2)
+.pipe(
+    map(...),
+    withLatestFrom(obs3),
+    map(...)
+  )
+  .subscribe(...)
+   
+```
+
+Lastly due to the fact that the functions are no longer extensions, some of them collide with keywords of Typescript.
+
+For example, `.do` and `.catch` are reserved keywords.
+
+`do` has been changed to `tap`.
+
+tap
+
+`catch` has been renamed to `catchError`
+
+catchError
+
+Those were the changes I had to make in my oen application, there might be more to change in your own project. The list can be found on the rxjs github repository.
+
 ## 3. Learnings
+
+When frameworks like rxjs switch directions, it is always interesting to try to understand the thought process behind it. I personally believe that frameworks of this caliber used by many applications bring changes to fulfill a particular vision. A vision which will enhance the way we program. Therefore deducing learnings is always good. From this change, I can see three points.
+
+1. Pipes are awesome
+2. We must strive to reduce codebase
+3. We must try to understand as much as we can the framework used
+
+Let's talk more about each points in order:
+
+Piping offers more possibilities than chaining as it allows composition of functions and extending the functionalities is less painful as augmenting Observables. We also get away from the dependency on the observable object and the function becomes a "first citizen".
+
+Keep codebase as tiny as possible. Trim and delete outdated code. Things are likely to change and code that you don't own is likely to break. Keeping the codebade small will allow us to be quicker in refactoring.
+
+Lastly understanding the scementic of the framework and ideology behind it allows us to understand the changes quicker as we know which function replaces which and we know what to expect in term of result.
+
+## Conclusion
+
+Today we saw how to migrate from rxjs 5 to 6. The major change being moving toward pipes. We saw the reasons why the rxjs team decided to move toward pipes, we then saw some example of refactoring from chaining to pipe and lastly we extracted learnings from this exercise. Hope you like this post, see you next time!
