completed pipe blog

--- a/20180608_pipe.md
+++ b/20180608_pipe.md
@@ -20,61 +20,66 @@ The reasons given on [the official documentation](https://github.com/ReactiveX/r
 
 Moving to pipe, import the operarors. For example this is a common code in my `ngrx` `effects`:
 
-mycall
-switchMap
-Call.map.catch
+```ts
+@Effect()
+load$: Observable<Action> = this.actions$
+  .ofType(account.LOAD_ALL)
+  .switchMap(() => {
+    return this.service.get()
+      .map(accounts => new account.LoadAllSuccessAction(accounts))
+      .catch(() => of(new account.LoadAllFailAction()));
+  });
+```
 
-_If you are interested in `ngrx` checkout my previous blog post [How to get started with Redux in Angular with ngrx]()_
+_If you are interested in `ngrx` checkout my previous blog post [How to get started with Redux in Angular with ngrx](https://kimsereyblog.blogspot.com/2017/07/managing-global-state-with-ngrx-store.html)_
 
 Now we can use the pipe function
 
-.pipe()
-
-*The rest of the operators now become simple standalone functions.*  We can combine them by passing them in `pipe`. This move brings us closer to a functional programming style as operators then become building blocks for us to build operators fulfilling our business.
-
-For example we could build an average operator which would calculate the average of each array received as input.
-
 ```ts
-
-average -> observable<number[]> -> observable<number>
-
+@Effect()
+load$: Observable<Action> = this.actions$
+  .ofType(account.LOAD_ALL)
+  .pipe(
+    switchMap(() => {
+      return this.service.get().pipe(
+          map(accounts => new account.LoadAllSuccessAction(accounts)),
+          catchError(() => of(new account.LoadAllFailAction()))
+      );
+    })
+  );
 ```
 
+*The rest of the operators now become simple standalone functions.*  We can combine them by passing them in `pipe`. This move brings us closer to a functional programming style as operators then become building blocks for us to build operators fulfilling our business.
 _We could have done it before too but it wasn't as straight forward. Here we only have a simple dedicated function._
-
-.pipe(average)
 
 Moving out of chaining, some functions made more sense as first class like `combineLatest`.
 Instead of chaining it, we can directly use:
 
-```
-combineLatest(obs1, obs2)
+```ts
+combineLatest(obs1$, obs2$)
 ```
 
 This make more sense than chaining as obs1 and obs2 are equal in term of behavior, unlike `withLatestFrom(obs2)` which only cares about the last value of obs2.
 
-```
-combine(obs1, obs2)
-.pipe(
+```ts
+combine(obs1$, obs2$)
+  .pipe(
     map(...),
-    withLatestFrom(obs3),
+    withLatestFrom(obs3$),
     map(...)
   )
-  .subscribe(...)
-   
+  .subscribe(...);
 ```
 
 Lastly due to the fact that the functions are no longer extensions, some of them collide with keywords of Typescript.
 
-For example, `.do` and `.catch` are reserved keywords.
+For example, `.do` and `.catch` are reserved keywords. `do` has been changed to `tap`.
 
-`do` has been changed to `tap`.
+```ts
+obs$.pipe(tap(x => console.log(x)));
+```
 
-tap
-
-`catch` has been renamed to `catchError`
-
-catchError
+Another one is `catch` which has been renamed to `catchError`.
 
 Those were the changes I had to make in my oen application, there might be more to change in your own project. The list can be found on the rxjs github repository.
 
