--- a/20180608_pipe.md
+++ b/20180608_pipe.md
@@ -12,7 +12,7 @@ Today we will explore the reasoning behind this change.
 
 The reasons given on [the official documentation](https://github.com/ReactiveX/rxjs/blob/master/doc/pipeable-operators.md#why) are:
 
-1. Any library importing the patch operator augmenting the observable prototype would also augment it for all consumers. When importing an extension `import 'rxjs/add/operators/map'`. That would make `map` available for all files importing the library. This could bring confusion due to the inconsistent way of importing extensions. Some place we would not need to important without issue while in other place of the code we would have to else the code would crash. The other issue would be that if we did not import the extension and relied (intentionally or not) on the import of the library we consume, the day they remove the import, our application will break.
+1. Any library importing the patch operator augmenting the observable prototype would also augment it for all consumers. For example, when a library imports `map` extension from `import 'rxjs/add/operators/map'`, it makes `map` available for all code importing the library itself. This could bring confusion due to the inconsistent way of importing extensions. Some places would not need to important `map` (those were the library is used) while in other place of the code we would have to else the compiler would complain. The other issue would be that if we did not import the extension and relied (intentionally or not) on the import of the library we consume, the day they remove the import, our application will break.
 2. This point is more on the optimization side. Unused operators added on prototype can't be removed during tree-shaking tools like webpack.
 3. Operators patches imported but not used can't be deleted by linters.
 
